--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.21.2-beta"
     implementation 'com.github.jeziellago:compose-markdown:0.2.9'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
