--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "rs.appsterdam.appsterdam"
+        applicationId "rs.appsterdam.app"
         minSdk 21
         targetSdk 32
         versionCode 1
