updated dependencies and URL image loading

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "rs.appsterdam.app"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 3 // Build number
         versionName "1.0" // Version number
 
@@ -46,15 +46,16 @@ android {
 }
 
 dependencies {
-    implementation "androidx.activity:activity-compose:1.4.0"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.activity:activity-compose:1.5.1"
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha01'
+    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     implementation "com.google.accompanist:accompanist-pager:0.21.2-beta"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.21.2-beta"
+    implementation "com.github.skydoves:landscapist-glide:1.6.1"
     implementation 'com.github.jeziellago:compose-markdown:0.2.9'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
