--- a/Appsterdam.jetpack/gradle.properties
+++ b/Appsterdam.jetpack/gradle.properties
@@ -23,5 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 kapt.incremental.apt=false
