--- a/Appsterdam.jetpack/app/build.gradle
+++ b/Appsterdam.jetpack/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 36
 
     defaultConfig {
         applicationId "rs.appsterdam.app"
@@ -47,25 +47,25 @@ android {
 }
 
 dependencies {
-    implementation "androidx.activity:activity-compose:1.5.1"
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.activity:activity-compose:1.10.1"
+    implementation 'androidx.core:core-ktx:1.16.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
+    implementation 'androidx.compose.material3:material3:1.3.2'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation "com.google.accompanist:accompanist-pager:0.21.2-beta"
-    implementation "com.google.accompanist:accompanist-pager-indicators:0.21.2-beta"
-    implementation "com.github.skydoves:landscapist-glide:1.6.1"
-    implementation 'com.github.jeziellago:compose-markdown:0.2.9'
-    implementation 'com.google.code.gson:gson:2.9.0'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.2'
+    implementation 'androidx.activity:activity-compose:1.10.1'
+    implementation "com.google.accompanist:accompanist-pager:0.36.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.36.0"
+    implementation "com.github.skydoves:landscapist-glide:2.5.1"
+    implementation 'com.github.jeziellago:compose-markdown:0.5.7'
+    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.9.2"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation 'io.insert-koin:koin-android:3.2.0'
+    implementation 'io.insert-koin:koin-android:4.1.0'
     implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
